k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-analysis-service
  labels:
    app: weather-analysis
spec:
  selector:
    app: weather-analysis
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
  type: ClusterIP
